# Phronis

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
data/: dataset_info.json
src/llamacli/: __init__.py  bootstrap.py  cli.py  env_setup.py  prompts.py  repro.py  runner.py  workspace.py
src/llamacli/data/: identity.json
src/phronis/: __init__.py  __main__.py  bootstrap.py  cli.py  env_setup.py  hf.py  logo.py  prompts.py  repro.py  runner.py  state.py  workspace.py
src/phronis/data/: dataset_info.json  demo_chat.json
tests/: __init__.py  conftest.py  e2e_test_harness.py  test_cli_functions.py  test_demo_datasets.py  test_e2e.py  test_env_setup.py  test_integration.py  test_negative_paths.py  test_prompts.py  test_repro.py  test_runner.py  test_screens.py  test_smoke.py  test_state.py  test_workspace.py
